updated RStudio to manual

--- a/06_Paper/COG-ED/Stage 2/CAD.bib
+++ b/06_Paper/COG-ED/Stage 2/CAD.bib
@@ -628,15 +628,13 @@
   url          = {https://www.R-project.org/},
 }
 
-@Misc{RStudioTeam2020,
-  author    = {{RStudio Team}},
-  note      = {Programmers: \_:n3594},
-  title     = {{RStudio}: {Integrated} development for {R}},
-  year      = {2020},
-  address   = {Boston, MA},
-  groups    = {CERED, Burnout in teachers},
-  publisher = {RStudio, PBC},
-  url       = {http://www.rstudio.com},
+@Manual{RStudioTeam2020,
+  title        = {{RStudio: Integrated Development Environment for R}},
+  address      = {Boston, MA},
+  author       = {{RStudio Team}},
+  organization = {RStudio, PBC.},
+  year         = {2020},
+  url          = {http://www.rstudio.com/},
 }
 
 @Article{Scheffel2019b,
