I knew tables in markdown were trouble when i walked in

--- a/06_Paper/ER-ED/ERED_Stage2/Results.Rmd
+++ b/06_Paper/ER-ED/ERED_Stage2/Results.Rmd
@@ -53,8 +53,8 @@ papaja::apa_table(
   caption = "$M \\pm SD$ of subjective arousal, subjetive effort, subjective utility, Corrugator activity, and Levator activity for each condition.",
   escape = FALSE,
   placement = "H",
-  font_size = "footnotesize",
-  align = c("l","c","c","c","c"))
+  align = c("r","c","c","c","c","c"),
+  landscape = TRUE)
 ```
 
 #### Subjective effort of ER strategies
