--- a/06_Paper/ER-ED/ERED_Stage2/Manuscript_ERED_Stage2.tex
+++ b/06_Paper/ER-ED/ERED_Stage2/Manuscript_ERED_Stage2.tex
@@ -606,33 +606,28 @@ For detailed information on post-hoc tests, please see tables \ref{tab:SupplEffe
 
 {[}INSERT TABLE 1 HERE{]}
 
-\begin{table}[H]
+\begin{lltable}
 
-\begin{center}
-\begin{threeparttable}
-
-\caption{\label{tab:TabDescr}$M \pm SD$ of subjective arousal, subjetive effort, subjective utility, Corrugator activity, and Levator activity for each condition.}
-
-\footnotesize{
-
-\begin{tabular}{lccccl}
+\begin{longtable}{rccccc}\noalign{\getlongtablewidth\global\LTcapwidth=\longtablewidth}
+\caption{\label{tab:TabDescr}$M \pm SD$ of subjective arousal, subjetive effort, subjective utility, Corrugator activity, and Levator activity for each condition.}\\
 \toprule
  & \multicolumn{1}{c}{Subjective Arousal} & \multicolumn{1}{c}{Subjective Effort} & \multicolumn{1}{c}{Subjective Utility} & \multicolumn{1}{c}{Corrugator activity (in mV)} & \multicolumn{1}{c}{Levator activity (in mV)}\\
 \midrule
+\endfirsthead
+\caption*{\normalfont{Table \ref{tab:TabDescr} continued}}\\
+\toprule
+ & \multicolumn{1}{c}{Subjective Arousal} & \multicolumn{1}{c}{Subjective Effort} & \multicolumn{1}{c}{Subjective Utility} & \multicolumn{1}{c}{Corrugator activity (in mV)} & \multicolumn{1}{c}{Levator activity (in mV)}\\
+\midrule
+\endhead
 $View_{neu}$ & 26.6 ± 39.1 & 18.1 ± 27.4 &  & 0.04 ± 6.99 & 0.09 ± 1.84\\
 $View_{neg}$ & 187.8 ± 87.3 & 49.4 ± 62.3 &  & 1.03 ± 7.21 & 0.58 ± 3.2\\
 Distraction & 158.1 ± 92.5 & 208.5 ± 96.1 & 216.6 ± 93.2 & 0 ± 7.67 & -0.05 ± 1.16\\
 Distancing & 164 ± 87.2 & 189.8 ± 92.3 & 214.8 ± 78.6 & 0.25 ± 1.92 & 0.01 ± 1\\
 Suppression & 168.6 ± 95.8 & 158.3 ± 99.5 & 229.3 ± 95 & 0.07 ± 3.78 & -0.03 ± 0.92\\
 \bottomrule
-\end{tabular}
+\end{longtable}
 
-}
-
-\end{threeparttable}
-\end{center}
-
-\end{table}
+\end{lltable}
 
 \hypertarget{subjective-effort-of-er-strategies}{%
 \paragraph{Subjective effort of ER strategies}\label{subjective-effort-of-er-strategies}}
