updated capital cases

--- a/06_Paper/COG-ED/Stage 2/CAD.bib
+++ b/06_Paper/COG-ED/Stage 2/CAD.bib
@@ -1,7 +1,7 @@
 @Article{Berger2021,
   author     = {Berger, Alexander and Kiefer, Markus},
   journal    = {Frontiers in Psychology},
-  title      = {Comparison of {Different} {Response} {Time} {Outlier} {Exclusion} {Methods}: {A} {Simulation} {Study}},
+  title      = {Comparison of different response time outlier exclusion methods: {A} simulation study},
   year       = {2021},
   issn       = {1664-1078},
   pages      = {2194},
@@ -87,7 +87,7 @@
 @Article{Cacioppo1984,
   author   = {Cacioppo, John T. and Petty, Richard E. and Kao, Chuan Feng},
   journal  = {Journal of Personality Assessment},
-  title    = {The {Efficient} {Assessment} of {Need} for {Cognition}},
+  title    = {The efficient assessment of {Need} for {Cognition}},
   year     = {1984},
   issn     = {0022-3891},
   month    = jun,
@@ -400,7 +400,7 @@
 @Article{Jonides1997,
   author   = {Jonides, J. and Schumacher, E. H. and Smith, E. E. and Lauber, E. J. and Awh, E. and Minoshima, S. and Koeppe, R. A.},
   journal  = {Journal of Cognitive Neuroscience},
-  title    = {Verbal {Working} {Memory} {Load} {Affects} {Regional} {Brain} {Activation} as {Measured} by {PET}},
+  title    = {Verbal working memory load affects regional brain activation as measured by {PET}},
   year     = {1997},
   issn     = {0898-929X},
   month    = jul,
@@ -629,7 +629,7 @@
 }
 
 @Manual{RStudioTeam2020,
-  title        = {{RStudio: Integrated Development Environment for R}},
+  title        = {{RStudio: Integrated development environment for R}},
   address      = {Boston, MA},
   author       = {{RStudio Team}},
   organization = {RStudio, PBC.},
@@ -788,7 +788,7 @@
 @Article{Whelan2008,
   author   = {Whelan, Robert},
   journal  = {The Psychological Record},
-  title    = {Effective {Analysis} of {Reaction} {Time} {Data}},
+  title    = {Effective analysis of reaction time data},
   year     = {2008},
   issn     = {2163-3452},
   month    = jul,
@@ -891,7 +891,7 @@
 @Misc{Wetzels2015,
   author    = {Ruud Wetzels and Don van Ravenzwaaij and Eric-Jan Wagenmakers},
   month     = {jan},
-  title     = {Bayesian Analysis},
+  title     = {Bayesian analysis},
   year      = {2015},
   doi       = {10.1002/9781118625392.wbecp453},
   groups    = {CAD},
@@ -973,6 +973,29 @@
   pages     = {1633--1652},
   volume    = {17},
   doi       = {10.1177/17456916211064896},
+  publisher = {{SAGE} Publications},
+}
+
+@Article{Schmitt2013,
+  author    = {Manfred Schmitt and Mario Gollwitzer and Anna Baumert and Gabriela Blum and Tobias Gschwendner and Wilhelm Hofmann and Tobias Rothmund},
+  journal   = {Frontiers in Psychology},
+  title     = {Proposal of a nonlinear interaction of person and situation ({NIPS}) model},
+  year      = {2013},
+  volume    = {4},
+  doi       = {10.3389/fpsyg.2013.00499},
+  publisher = {Frontiers Media {SA}},
+}
+
+@Article{Blum2018,
+  author    = {Gabriela S. Blum and John F. Rauthmann and Richard Göllner and Tanja Lischetzke and Manfred Schmitt},
+  journal   = {European Journal of Personality},
+  title     = {The nonlinear interaction of person and situation ({NIPS)} model: {Theory} and empirical evidence},
+  year      = {2018},
+  month     = {may},
+  number    = {3},
+  pages     = {286--305},
+  volume    = {32},
+  doi       = {10.1002/per.2138},
   publisher = {{SAGE} Publications},
 }
 
